[package]
name = "clean-pii"
version = "0.1.0"
authors = ["Pete Gadomski <pete@gru.org>"]
edition = "2018"

[dependencies]
chrono = { version = "*", features = ["serde"] }
clap = "*"
csv = "*"
hashids = { git = "https://github.com/gadomski/hashids_rust", branch = "master" }
failure = "*"
serde = "*"
serde_derive = "*"
